--- a/order-history.css
+++ b/order-history.css
@@ -1,10 +1,20 @@
 /* 주문내역 페이지 스타일 */
+.header {
+    display: flex;
+    justify-content: left;
+}
+
+.header-title h1 {
+    margin-left: 15px;
+}
+
 .tab-container {
     display: flex;
     background-color: #fff;
     border-bottom: 1px solid #eee;
     margin-bottom: 16px;
 }
+
 
 .tab-btn {
     flex: 1;
