--- a/style.css
+++ b/style.css
@@ -57,6 +57,16 @@ body {
     font-size: 20px;
 }
 
+.back-btn {
+    font-size: 22px;
+    color: #333;
+    margin-right: 15px;
+    text-decoration: none;
+    margin-left: 16px;
+    border: none;
+    background: none;
+}
+
 /* 즐겨찾기 섹션 스타일 */
 .favorites-section {
     margin-bottom: 10px;
