--- a/order-detail.css
+++ b/order-detail.css
@@ -1,7 +1,8 @@
 /* 주문 상세 페이지 스타일 */
 .header {
     display: flex;
-    justify-content: left;
+    justify-content: space-between;
+    margin: 0px 15px;
 }
 
 .header-title h1 {
@@ -11,7 +12,6 @@
 .progress-section {
     background-color: white;
     padding: 16px;
-    margin-bottom: 16px;
     border-bottom: 1px solid #eee;
 }
 
