--- a/cart.css
+++ b/cart.css
@@ -21,7 +21,7 @@
     padding: 10px;
     margin-bottom: 16px;
     min-height: 100px;
-    max-height: calc(60vh - 180px);
+    max-height: calc(87vh - 180px);
     overflow-y: auto;
 }
 
@@ -36,13 +36,15 @@
 }
 
 .cart-item-info {
+    width: 85%;
     display: flex;
     align-items: center;
+    flex-direction: column;
 }
 
 .cart-item-image {
-    width: 60px;
-    height: 60px;
+    width: 80px;
+    height: 80px;
     border-radius: 5px;
     background-color: #eee;
     margin-right: 15px;
@@ -53,6 +55,10 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.cart-item-details {
+    margin-right: auto;
 }
 
 .cart-item-details h3 {
@@ -70,6 +76,7 @@
 .cart-item-price {
     display: flex;
     align-items: center;
+    margin-left: auto;
 }
 
 .cart-item-quantity {
