--- a/order-detail.css
+++ b/order-detail.css
@@ -13,8 +13,17 @@
     font-weight: bold;
 }
 
+hr {
+    width: 448px;
+    margin: 0 auto;
+    border: 1px solid #ccc;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
 .progress-indicator {
     padding: 15px 12px 5px;
+    margin-top: 20px;
 }
 
 .progress-dots {
@@ -122,7 +131,7 @@
 }
 
 .order-info-header {
-    margin-bottom: 15px;
+    margin-bottom: 25px;
 }
 
 .order-info {
