--- a/detail.css
+++ b/detail.css
@@ -297,8 +297,8 @@
 
 /* 장바구니 버튼 */
 .cart-btn {
-    background-color: #4a90e2;  
-    color: white;
+    background-color: #f2f2f2;  
+    color: black;
 }
 
 /* 바로결제 버튼 */
