--- a/weekly-menu.css
+++ b/weekly-menu.css
@@ -11,26 +11,26 @@
 }
 
 header {
-    position: sticky;
-    top: 0;
-    background-color: #fff;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    padding: 16px;
     display: flex;
-    align-items: center;
-    z-index: 10;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 10px;
+    margin-bottom: 5x;
+    background-color: white;
 }
 
 header h1 {
-    margin: 0 0 0 16px;
-    font-size: 18px;
+    font-size: 22px;
+    color: #333;
+    margin-bottom: 5px;
 }
 
 .back-btn {
-    background: none;
+    font-size: 22px;
+    color: #333;
+    text-decoration: none;
     border: none;
-    font-size: 18px;
-    cursor: pointer;
+    background: none;
 }
 
 .weekly-menu-container {
